--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </html>
 <script>
     function handleMoonClick() {
-        window.location.href = 'moon_index.html';
+        window.location.href = 'interactive_seismic_report_single.html';
     }
     function handleMarsClick() {
         window.location.href = 'index_mars.html';
